prevent overflow

--- a/client/stylesheets/components/_blog.scss
+++ b/client/stylesheets/components/_blog.scss
@@ -29,7 +29,7 @@
       display: table-cell;
       padding: 15px;
       .title {
-        word-break: break-word;
+        word-break: break-all;
       }
       .date {
         font-size: .8em;
