--- a/client/stylesheets/components/_post.scss
+++ b/client/stylesheets/components/_post.scss
@@ -14,6 +14,7 @@
     padding: 20px;
     font-size: 13px;
     color: #777777;
+    word-wrap: break-word;
   }
   blockquote {
     border-left: 5px solid #00bcd4;
